--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
             <tr>
               <th scope="col">#</th>
               <th scope="col">NAME</th>
-              <th scope="col">IN</th>
+              <th scope="col">ATTENDANCE</th>
               <th scope="col">ASSIGNMENT</th>
             </tr>
           </thead>
