--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,71 +1,17 @@
-<div class="container">
+<div *ngIf="!(day > 0)" class="container-fluid">
   <div class="row">
     <div class="col">
-      <br />
-      <h1 class="text-center">
-        Angular Training<span class="badge badge-secondary">Day 2</span>
-      </h1>
-      <br />
-      <div class="table-responsive">
-        <table class="table table-bordered text-center align-middle">
-          <thead class="thead-dark">
-            <tr>
-              <th scope="col">#</th>
-              <th scope="col">NAME</th>
-              <th scope="col">ATTENDANCE</th>
-              <th scope="col">IN TIME</th>
-              <th scope="col">ASSIGNMENT</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let attendee of attendees; index as i">
-              <th scope="row">{{ i + 1 }}</th>
-              <td class="text-left">
-                {{ attendee.name }}
-              </td>
-              <th>
-                <div>
-                  <label class="form-check-label">
-                    <input
-                      type="checkbox"
-                      [(ngModel)]="attendee.isIn"
-                      (change)="attendanceChanged(attendee)"
-                    />
-                  </label>
-                </div>
-              </th>
-              <th>
-                <div>
-                  <span
-                    *ngIf="attendee.inTime"
-                    [ngClass]="{
-                      badge: attendee.inTime,
-                      'badge-success': attendee.status === 'good',
-                      'badge-info': attendee.status === 'not-on-time',
-                      'badge-warning': attendee.status === 'late',
-                      'badge-danger': attendee.status === 'no-entry'
-                    }"
-                  >
-                    {{ attendee.inTime }}
-                  </span>
-                </div>
-              </th>
-              <th>
-                <div>
-                  <label class="form-check-label">
-                    <input
-                      type="checkbox"
-                      name="isIn"
-                      id="isIn"
-                      value="checkedValue"
-                    />
-                  </label>
-                </div>
-              </th>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+      <form>
+        <div class="form-group">
+          <label for="exampleFormControlSelect1">Which day training?</label>
+          <select class="form-control" (change)="setDay($event.target.value)">
+            <option value="0">--Day--</option>
+            <option *ngFor="let day of days" [ngValue]="day">{{ day }}</option>
+          </select>
+        </div>
+      </form>
     </div>
   </div>
 </div>
+
+<app-attendee [day]="day"></app-attendee>
